<resources>
    <string name="app_name">masterSaab</string>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>
    <string name="heading">Heading</string>
    <string name="content">Content are the big field</string>
    <string name="title">title</string>
    <string name="image_related_to_content">image related to content</string>
    <string name="masterSaab_logo">masterSaab_logo</string>
    <string name="art_amp_culture"><![CDATA[Art & Culture]]></string>
    <string name="defence_amp_security"><![CDATA[Defence & Security]]></string>
    <string name="disaster_management">Disaster Management</string>
    <string name="economics">Economics</string>
    <string name="geography">Geography</string>
    <string name="governance_amp_social_justice"><![CDATA[Governance & Social Justice]]></string>
    <string name="indian_society">Indian Society</string>
    <string name="international_relations">International Relations</string>
    <string name="polity">Polity</string>
    <string name="science_amp_technology"><![CDATA[Science & Technology]]></string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="communicate">Communicate</string>
    <string name="contact">Contact us</string>
    <string name="about">About masterSaab</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="back">Back</string>
    <string name="environment">Environment</string>
    <string name="zoomIn">ZoomIn</string>
    <string name="zoomOut">ZoomOut</string>
    <string name="date">date</string>
    <string name="history">History</string>
    <string name="instagram_icon">instagram_icon</string>
    <string name="twitter_icon">twitter_icon</string>
    <string name="facebook_icon">facebook_icon</string>

    <string name="contact_content">We would love you hear from you. Let us know if you are facing any problems, have any questions or want to share feedback. \n\nWe are always happy to help!
        \n\n Student Contact Center
        \n support@mastersaab.in
        \n\n For Any Business Enquiry
        \n contact@mastersaab.in
        \n\n Follow Us On Social Media
    </string>

    <string name="about_content1">masterSaab is India\'s new learning platform.
        \n\nSarkari Exam Oriented Daily Current Affairs &amp; GK  : UPSC, RRB, SSC &amp; Banking.
        \n\nSarkari Exam Oriented Daily Current Affairs &amp; GK  : UPSC, RRB, SSC &amp; Banking.
        \n\nmasterSaab - India\'s new learning platform to learn Current Affairs for Civil Services, UPPSC, BPSC, CDS, NDA, Bank, SSC &amp; Railways exams in Hindi. Now master General Knowledge and Awareness anywhere, anytime for free.

    </string>

    <string name="about_content2">
        \nWe believe that these exams can make a huge impact in a student\'s life. We help them prepare actively for these exams &amp; score better.
    </string>

    <string name="about_content3">
        \nEverything is carefully selected by a team of masterSaab keeping your exam needs in mind.
    </string>

    <string name="privacy_content">PRIVACY POLICY
\n\nThe following privacy policy is being published in accordance with the provisions of the Information Technology Act, 2000 ("IT ACT"), Information Technology (Intermediary Guidelines) Rules, 2011, Information Technology (Reasonable Security Practices and Procedures and Sensitive Personal Data or Information) Rules, 2011.
\n\nThe Privacy Policy here explains the policy masterSaab  of app, with respect to the disclosure, collection, storage, usage and protection of your information during the course of your interaction with  the App.

\n\n\nPlease read the Privacy Policy carefully in conjunction with the Terms of Use as stated under IT Act. In case, you do not understand this policy, or do not accept any part of the policy mentioned, then you should refrain from using the Platform altogether. Your and/or continued use of the Platform, amounts to an express consent to the terms of Privacy Policy as well as the Terms of Use.

\n\n\nFor the purposes of this Policy, access of the Website and the App together with any study material. made available or uploaded therein or downloaded, embedded therefrom shall collectively be referred to as the “Services”.

\n\n\nThis Privacy Policy forms part and parcel of the Terms of Use for themasterSaab Services and shall be read as a whole. Capitalized terms used here, but undefined, shall have the same meaning as attributed to them in the Terms of Use.
\nSECURITY OF INFORMATION COLLECTED
\nWe take the security of your personal information seriously and use appropriate technical and organizational measures to protect your personal information against unauthorized or unlawful processing and against accidental loss, destruction or damage. Unfortunately, the transmission of information via the internet is not completely secure. Although we will do our best to protect your personal data, we cannot guarantee the security of your data which is transmitted to or from the Service. Any transmission is at your own risk.
\nWe keep your personal information for no longer than is necessary for our business purposes or for legal requirements.</string>

    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="share_button_content">Study anytime, anywhere for free, Download masterSaab is India\'s new learning platform, to read Current Affairs for Civil Services, CDS, NDA, Bank, SSC &amp; Railways exams in Hindi.\n</string>

    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password">forget password?</string>
    <string name="create_account">create an account</string>
    <string name="conform_password">Conform password</string>
    <string name="full_name">Full name</string>
    <string name="sign_up">Sign up</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="_91">+91</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="info_phone1"><![CDATA[Please enter your Country Code\n and Phone number for verification]]></string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="info_phone2">We have sent you an OTP \n for phone number verification</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="working">working…</string>
    <string name="Please_enter_the_otp">Please enter the OTP</string>
    <string name="verification_failed">Verification Failed, please try again.</string>
    <string name="fill_the_form">Please fill in the form to continue.</string>
    <string name="otp_invalid">The OTP entered was invalid</string>
    <string name="change_phone_number">change phone number</string>

</resources>
