<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_category"
            android:title="@string/category" />

    </group>

    <item android:title="@string/communicate">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_about"
                    android:checkable="false"
                    android:title="@string/about" />

                <item
                    android:id="@+id/nav_contact"
                    android:checkable="false"
                    android:title="@string/contact" />

                <item
                    android:id="@+id/nav_Privacy_Policy"
                    android:checkable="false"
                    android:title="@string/privacy_policy" />

            </group>
        </menu>
    </item>

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_rate_app"
            android:checkable="false"
            android:title="@string/rate_app" />

        <item
            android:id="@+id/nav_share_app"
            android:checkable="false"
            android:title="@string/share_app" />

    </group>

</menu>