<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.communicate.ContactFragment">

    <ImageButton
        android:id="@+id/facebook_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/facebook_icon"
        app:layout_constraintEnd_toStartOf="@+id/instagram_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/instagram_button"
        android:contentDescription="@string/facebook_icon"/>

    <ImageButton
        android:id="@+id/instagram_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/instagram_icon"
        android:contentDescription="@string/instagram_icon"
        app:layout_constraintEnd_toStartOf="@+id/twitter_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebook_button"
        app:layout_constraintTop_toBottomOf="@+id/contact_content_textView" />

    <ImageButton
        android:id="@+id/twitter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/twitter_icon"
        android:contentDescription="@string/twitter_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/instagram_button"
        app:layout_constraintTop_toTopOf="@+id/instagram_button" />

    <TextView
        android:id="@+id/contact_content_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autoLink="email"
        android:padding="10dp"
        android:text="@string/contact_content"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>