<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.communicate.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

    <TextView
        android:id="@+id/about_content_textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_content1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/about_content_textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_content2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_content_textView1"/>

    <TextView
        android:id="@+id/about_content_textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_content3"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_content_textView2"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>