<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AuthenticationActivity">

    <Button
        android:id="@+id/google_signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_with_google"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:icon="@drawable/ic_google_color"
        app:iconTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/email_signInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/email_signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/emailButton_signInColor"
        android:text="@string/sign_in_with_email"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:icon="@drawable/ic_email"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/phone_signInButton"
        app:layout_constraintEnd_toEndOf="@+id/google_signInButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/google_signInButton" />

    <Button
        android:id="@+id/phone_signInButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/phoneButton_signInColor"
        android:text="@string/sign_in_with_phone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:icon="@drawable/ic_phone"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email_signInButton"
        app:layout_constraintStart_toStartOf="@+id/email_signInButton" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/allSignIn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="google_signInButton,email_signInButton,phone_signInButton" />


</androidx.constraintlayout.widget.ConstraintLayout>